...
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ChatActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ed_to"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/textView4"
        android:layout_marginLeft="20dp"/>

...
